--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iconsax-react": "^0.0.8",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
