--- a/package.json
+++ b/package.json
@@ -12,20 +12,32 @@
     "@hookform/resolvers": "^4.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-table": "^8.21.2",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "iconsax-react": "^0.0.8",
+    "lucide-react": "^0.487.0",
+    "moment-jalaali": "^0.10.4",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "prisma": "^6.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.0.2",
+    "react-quill-new": "^3.4.6",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.1.0",
+    "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -33,6 +45,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/quill": "^2.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
