--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.4.6",
+    "recharts": "^2.15.2",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
