--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-radio-group": "^1.2.4",
@@ -41,8 +42,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^3.6.0",
     "date-fns-jalali": "^4.1.0-0",
+    "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^5.2.3",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.487.0",
@@ -52,13 +53,11 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "prisma": "^6.5.0",
-    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-day-picker": "^9.6.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
-    "react-quill-new": "^3.4.6",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "swr": "^2.3.3",
